<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/fab_margin"
        android:paddingEnd="@dimen/fab_margin"
        android:paddingStart="@dimen/fab_margin"
        android:weightSum="1">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/life_story_lines"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/events_color_setting"
            android:entries="@array/life_options"/>

        <Switch
            android:id="@+id/life_story_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.26"
            android:paddingEnd="30dp"
            android:paddingStart="30dp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/fab_margin"
        android:weightSum="1">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/family_tree_lines"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/family_color_setting"
            android:entries="@array/family_options"/>

        <Switch
            android:id="@+id/family_tree_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.26"
            android:paddingEnd="30dp"
            android:paddingStart="30dp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/fab_margin"
        android:weightSum="1">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/spouse_lines"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spouse_color_setting"
            android:entries="@array/spouse_options"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spouse_setting"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:layout_weight="0.26"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/fab_margin"
        android:weightSum="1">

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.91"
            android:text="@string/map_type"
            android:textSize="20sp"
            android:textStyle="bold" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/map_options"
            android:id="@+id/map_spinner"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/re_sync_data"
        android:textSize="20sp"
        android:id="@+id/sync_button_setting"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="20sp"
        android:id="@+id/logout_button_setting"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/loading_text"
        android:textSize="30sp"/>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        android:layout_weight="0.19"
        android:id="@+id/waitingBar"
        style="?android:attr/progressBarStyleHorizontal"/>

</LinearLayout>