<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_filter_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/fab_margin"
    android:paddingLeft="@dimen/fab_margin"
    android:paddingRight="@dimen/fab_margin"
    android:paddingTop="@dimen/fab_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingTop="15dp"
            android:text="@string/father_s_side" />

        <Switch
            android:id="@+id/father_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingTop="15dp"
            android:text="@string/mother_s_side" />

        <Switch
            android:id="@+id/mother_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:paddingTop="15dp"
            android:text="@string/male_events" />

        <Switch
            android:id="@+id/male_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="15dp"
            android:text="@string/female_events" />

        <Switch
            android:id="@+id/female_switch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/filter_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:padding="5dp">-->
    <!--<TextView-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:paddingTop="15dp"-->
    <!--android:paddingBottom="5dp"-->
    <!--android:layout_weight="1"-->
    <!--android:text="@string/birth_events"/>-->
    <!--<Switch-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:checked="true"-->
    <!--android:layout_weight="1"-->
    <!--android:id="@+id/birth_switch"/>-->
    <!--</LinearLayout>-->
    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="1dp"-->
    <!--android:background="@android:color/darker_gray"/>-->
    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:padding="5dp">-->
    <!--<TextView-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:paddingTop="15dp"-->
    <!--android:paddingBottom="5dp"-->
    <!--android:layout_weight="1"-->
    <!--android:text="@string/baptism_events"/>-->
    <!--<Switch-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:checked="true"-->
    <!--android:layout_weight="1"-->
    <!--android:id="@+id/baptism_switch"/>-->
    <!--</LinearLayout>-->
    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="1dp"-->
    <!--android:background="@android:color/darker_gray"/>-->
    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:padding="5dp">-->
    <!--<TextView-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:paddingTop="15dp"-->
    <!--android:paddingBottom="5dp"-->
    <!--android:layout_weight="1"-->
    <!--android:text="@string/marriage_events"/>-->
    <!--<Switch-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:checked="true"-->
    <!--android:layout_weight="1"-->
    <!--android:id="@+id/marriage_switch"/>-->
    <!--</LinearLayout>-->
    <!--<View-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="1dp"-->
    <!--android:background="@android:color/darker_gray"/>-->
    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:padding="5dp">-->
    <!--<TextView-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:paddingTop="15dp"-->
    <!--android:paddingBottom="5dp"-->
    <!--android:layout_weight="1"-->
    <!--android:text="@string/death_events"/>-->
    <!--<Switch-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:checked="true"-->
    <!--android:layout_weight="1"-->
    <!--android:id="@+id/death_switch"/>-->
    <!--</LinearLayout>-->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>
